# pyql3

./: .gitignore  404.html  LICENSE  QuickLook3.spec  README.md  build_app.bat  build_app.sh  hooks.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: release.yml
api/: index.html
docs/: api.md  index.md
javascripts/: script.js
pyql3/: __init__.py
pyql3/analysis/: strehl.py
pyql3/core/: fits_reader.py
pyql3/gui/: main_window.py
pyql3/gui/dialogs/: header_editor.py  polling.py
pyql3/gui/tools/: advanced_plots.py  arithmetic.py  base_tool.py  cuts.py  depth_plot.py  fitting.py  photometry.py  plot_catalog.py  rotate.py  statistics.py  strehl.py
pyql3/gui/viewers/: image_viewer.py  plot_viewer.py
pyql3/services/: config.py  poller.py
search/: search_index.json
