[project]
name = "pyql3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=8.0.1",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "photutils>=3.0.0",
    "pydantic>=2.13.4",
    "pyopengl>=3.1.10",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.1",
    "scikit-image>=0.26.0",
    "scipy>=1.18.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pillow>=12.3.0",
    "pyinstaller>=6.21.0",
]
