[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyql3"
dynamic = ["version"]
description = "QuickLook 3 is a modern, high-performance Python/Qt-based application designed for viewing integral field spectroscopy data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=8.0.1",
    "cmcrameri>=1.9",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "photutils>=3.0.0",
    "pydantic>=2.13.4",
    "pyopengl>=3.1.10",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.6.0,<6.8.0",
    "scikit-image>=0.26.0",
    "scipy>=1.18.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pillow>=12.3.0",
    "pyinstaller>=6.21.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]

[tool.setuptools_scm]
write_to = "pyql3/_version.py"

[tool.setuptools]
packages = ["pyql3"]
